# CSFS

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CLEARANCE.md  LICENSE  README.md  csfs.yaml  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  provider_request.md
.github/workflows/: acquire.yml  ci.yml  docs.yml
docs/: all_stations.json  all_stations_full.json  architecture.md  catalog.md  cli.md  coverage_stats.json  data_request_emails.md  index.md  provider_summary.json  python-api.md  quickstart.md  reference.md  symfluence.md
inventory/: clearance.csv  providers.yaml
scripts/: build_database.sh  probe_connectors.py
src/csfs/: __init__.py
src/csfs/api/: app.py
src/csfs/cli/: main.py
src/csfs/connectors/: _kiwis.py  adhi.py  afghanistan_usgs.py  argentina_ina.py  argentina_snih.py  australia_bom.py  austria_ehyd.py  bangladesh_ffwc.py  base.py  belgium_spw.py  belgium_vmm.py  belgium_wallonia.py  belgium_waterinfo.py  bolivia_ine.py  bosnia_fhmz.py  brazil_ana.py  bulgaria_eaemdr.py  bulgaria_nimh.py  ca_discharge.py  camels_aus.py  camels_br.py  camels_ch.py  camels_cl.py  camels_col.py  camels_de.py  camels_dk.py  camels_fi.py  camels_fr.py  camels_gb.py  camels_ind.py  camels_lux.py  camels_nz.py  camels_pe.py  camels_se.py  camels_spat.py  camels_us.py  camelsh.py  caravan.py  chile_dga.py  china_mwr.py  (+79 more)
src/csfs/core/: __init__.py  config.py  downloads.py  exceptions.py  health.py  models.py  registry.py  reproject.py
src/csfs/integrations/: __init__.py  symfluence.py
src/csfs/scheduler/: cron.py  runner.py
src/csfs/store/: base.py  duckdb_store.py
tests/: conftest.py  test_api.py  test_base_connector.py  test_cli.py  test_config.py  test_connector_integrity.py  test_cron.py  test_dataset_artifacts.py  test_download_checksum.py  test_downloads.py  test_facade.py  test_health.py  test_lamah_ice_dataset_artifact.py  test_models.py  test_provider_api_verified.py  test_runner.py  test_store.py  test_streamflow_native_parity.py  test_symfluence_integration.py  test_usgs_native_parity.py
tests/connectors/: test_adhi.py  test_afghanistan_usgs.py  test_argentina_ina.py  test_argentina_snih.py  test_australia_bom.py  test_austria_ehyd.py  test_bangladesh_ffwc.py  test_belgium_spw.py  test_belgium_vmm.py  test_belgium_wallonia.py  test_belgium_waterinfo.py  test_bolivia_ine.py  test_bosnia_fhmz.py  test_brazil_ana.py  test_bulgaria_eaemdr.py  test_bulgaria_nimh.py  test_ca_discharge.py  test_camels_aus.py  test_camels_br.py  test_camels_ch.py  test_camels_cl.py  test_camels_col.py  test_camels_de.py  test_camels_dk.py  test_camels_fi.py  test_camels_fr.py  test_camels_gb.py  test_camels_ind.py  test_camels_lux.py  test_camels_nz.py  test_camels_pe.py  test_camels_se.py  test_camels_spat.py  test_camels_us.py  test_camelsh.py  test_caravan.py  test_chile_dga.py  test_china_mwr.py  test_colombia_ideam.py  test_croatia_dhz.py  (+77 more)
