[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csfs"
version = "0.1.0"
description = "Community Streamflow Service — live acquisition and harmonization of global streamflow observations"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10"
authors = [
    { name = "CSFS Contributors" },
]
keywords = ["hydrology", "streamflow", "water", "open-data", "time-series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "croniter>=2.0",
    "structlog>=24.0",
    "tenacity>=8.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
]

[project.scripts]
csfs = "csfs.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/csfs"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B905"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=csfs --cov-report=term-missing:skip-covered --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["csfs"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 0
precision = 0
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = false
check_untyped_defs = true
