[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "community-streamflow-service"
dynamic = ["version"]
description = "Community Streamflow Service — live acquisition and harmonization of global streamflow observations"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Darri Eythorsson", email = "dae5@hi.is" },
]
keywords = ["hydrology", "streamflow", "water", "open-data", "time-series"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Hydrology",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "click>=8.0",
    "pyyaml>=6.0",
    "croniter>=2.0",
    "structlog>=24.0",
    "tenacity>=8.0",
    "pytz>=2024.1",
    "pyproj>=3.6",
    "cdsapi>=0.7.2",
    "xarray>=2024.1",
    "cfgrib>=0.9.10",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.0",
]
api = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "types-PyYAML",
    "types-croniter",
]

[project.urls]
Homepage = "https://github.com/DarriEy/CSFS"
Repository = "https://github.com/DarriEy/CSFS"
Documentation = "https://darriey.github.io/CSFS/"
Issues = "https://github.com/DarriEy/CSFS/issues"
Changelog = "https://github.com/DarriEy/CSFS/blob/main/CHANGELOG.md"

[project.scripts]
csfs = "csfs.cli.main:cli"

# SYMFLUENCE auto-discovers this on `import symfluence` (its bootstrap loads
# the "symfluence.plugins" entry-point group and invokes each hook). CSFS does
# NOT depend on symfluence: the hook is simply never loaded when symfluence is
# absent, and csfs.integrations.symfluence imports cleanly either way.
[project.entry-points."symfluence.plugins"]
csfs = "csfs.integrations.symfluence:register"

[tool.hatch.version]
path = "src/csfs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/csfs"]

[tool.ruff]
src = ["src"]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
ignore = ["B905"]

[tool.ruff.lint.per-file-ignores]
"src/csfs/connectors/estreams.py" = ["E501"]
"src/csfs/connectors/gsim.py" = ["E501"]
"src/csfs/connectors/israel_caravan.py" = ["E501"]
"src/csfs/connectors/panama_stri.py" = ["E501"]
"tests/connectors/test_croatia_dhz.py" = ["E501"]
"tests/connectors/test_germany_bavaria.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=csfs --cov-report=term-missing:skip-covered --cov-report=html:htmlcov"
markers = [
    "network: test reaches a real upstream API; deselected in CI via -m 'not network'",
]

[tool.coverage.run]
source = ["csfs"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Offline suite measures ~92%; floor set ~5 points below, rounded to a multiple of 5.
fail_under = 85
precision = 0
sort = "Cover"
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
disallow_untyped_defs = false
check_untyped_defs = true

# pyarrow ships no type stubs (no py.typed, no published types package).
# pandas is an optional extra; mypy must pass whether or not it is installed.
# symfluence is never a dependency — csfs.integrations.symfluence imports it
# defensively and degrades when absent, so mypy must not require it either.
[[tool.mypy.overrides]]
module = ["pyarrow", "pyarrow.*", "pandas", "pandas.*", "symfluence", "symfluence.*"]
ignore_missing_imports = true
